--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,16 +13,17 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install selenium pytest pytest-html
+    
     - name: Install ChromeDriver
       run: |
-        wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-        sudo apt-get update
-        sudo apt-get install -y google-chrome-stable
-    - name: Kill existing Chrome processes
-      run: |
-          sudo pkill -o -e -f chrome || true
-          sudo pkill -o -e -f chromedriver || true
-          sleep 2  # Give time for processes to terminate
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable
+          CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+\.\d+')
+          wget https://chromedriver.storage.googleapis.com/${CHROME_VERSION}/chromedriver_linux64.zip
+          unzip chromedriver_linux64.zip
+          sudo mv chromedriver /usr/local/bin/
+          sudo chmod +x /usr/local/bin/chromedriver
+
     - name: Run tests
       run: pytest tests/test_ecommerce.py --html=report.html
     - name: Upload report
