--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,15 +14,14 @@ jobs:
         python -m pip install --upgrade pip
         pip install selenium pytest pytest-html
     
-    - name: Install ChromeDriver
+    - name: Install Chrome
       run: |
-          sudo apt-get update
-          sudo apt-get install -y google-chrome-stable
-          CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+\.\d+')
-          wget https://chromedriver.storage.googleapis.com/${CHROME_VERSION}/chromedriver_linux64.zip
-          unzip chromedriver_linux64.zip
-          sudo mv chromedriver /usr/local/bin/
-          sudo chmod +x /usr/local/bin/chromedriver
+        sudo apt-get update
+        sudo apt-get install -y google-chrome-stable
+
+    - name: Run tests
+      run: pytest tests/test_ecommerce.py --html=reports/report.html
+
 
     - name: Run tests
       run: pytest tests/test_ecommerce.py --html=report.html
