--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install selenium pytest pytest-html
+        pip install selenium pytest pytest-html chromedriver-autoinstaller
     
     - name: Install Chrome
       run: |
